# reports

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  generate.py  index.html  package-lock.json  package.json  postcss.config.js  pyproject.toml  report.ipynb  requirements.in  requirements.txt  rollup.config.js  tailwind.config.js
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: monthly_reports.md  task.md
.github/workflows/: main.yml  refresh-data.yml  terraform-apply.yml  terraform-plan.yml  test-lint.yml
2021/07/: index.html
assets/scss/: style.scss
config/docker/: Dockerfile
css/: style.css  style.min.css
data/: caltrans_geoportal_export.py  index_report.json
data/example_data_itp_98/: 1_feed_info.json  1_status.json  2_daily_service_hours.json  2_n_expired_days.json  3_routes_changed.json  3_stops_changed.json  4_file_check.csv  4_file_check.json
demo/: 1_generate_ids.py  Makefile  report.ipynb
iac/: .terraform.lock.hcl  provider.tf  storage_object.tf  variables.tf
js/: bundle.js
reports/: 1_generate_ids.py  3_generate_report_emails.py  Dockerfile  Makefile  README.md  build.py  config-example.ini  config.ini  create_reports.py  docker-compose.yml  generate_ids.py  generate_index_report.py  generate_report_emails.py  generate_reports.py  generate_reports_data.py  generate_rt_feeds.py  package-lock.json  report.ipynb  requirements.txt  rt_feeds.py  run_all_months.py  test_emails.csv  utils.py  validate_reports.py
reports/outputs/: .gitignore
templates/: faqs.html.jinja  index.html  index.html.jinja  macros.html.jinja  month.html.jinja  report.html.jinja
templates/email/: report.html  report.mjml
templates/layout/: default.html.jinja
tests/: test_report_data.py
website/: cacheBuster.js  generate.py  package-lock.json  package.json  postcss.config.js  rollup.config.js  rollup.config.mjs  tailwind.config.js
website/data/: faqs.toml
(+2915 files in other folders)
