[tool.poetry]
name = "reports"
version = "0.1.0"
description = ""
authors = ["Andrew Vaccaro <andrew.v@jarv.us>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
calitp-data-analysis = "2023.4.3"
tqdm = "^4.65.0"
tomli = "^2.0.1"
postmarker = "^1.0"
markupsafe = "^2.1.2"
jsonschema = "^4.17.3"
jinja-markdown = "^1.210911"
typer = "^0.7.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
mypy = "^1.2.0"
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.2.2"
types-tqdm = "^4.65.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
