[tool.poetry]
name = "reports"
version = "0.2.0"
description = ""
authors = ["Andrew Vaccaro <andrew.v@jarv.us>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
tqdm = "^4.65.0"
tomli = "^2.0.1"
postmarker = "^1.0"
markupsafe = "^2.1.2"
jsonschema = "^4.17.3"
jinja-markdown = "^1.210911"
typer = "^0.7.0"
calitp-data-analysis = "2024.5.28"
#calitp-data-infra = "2024.4.1"
hubspot-api-client = "11.0.0"
jupyter = "^1.0.0"
pandas = "<2"
numpy = "<2.0.0"
nodeenv = "^1.8.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
mypy = "^1.2.0"
black = "^24.3.0"
isort = "^5.12.0"
pytest = "^7.2.2"
types-tqdm = "^4.65.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
